--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -70,63 +70,63 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="content"/>
+        app:constraint_referenced_ids="content" />
 
     <ImageView
         android:id="@+id/share"
         android:layout_width="@dimen/dimIc"
         android:layout_height="@dimen/dimIc"
-        app:srcCompat="@android:drawable/ic_menu_share"
         android:layout_marginVertical="@dimen/common_margin"
-        app:layout_constraintTop_toBottomOf="@id/basement"
         android:layout_marginStart="@dimen/common_margin"
-        app:layout_constraintStart_toEndOf="@id/textLike"/>
+        app:layout_constraintStart_toEndOf="@id/textLike"
+        app:layout_constraintTop_toBottomOf="@id/basement"
+        app:srcCompat="@android:drawable/ic_menu_share" />
 
     <ImageView
         android:id="@+id/views"
         android:layout_width="@dimen/dimIc"
         android:layout_height="@dimen/dimIc"
-        app:srcCompat="@android:drawable/ic_menu_view"
         android:layout_marginVertical="@dimen/common_margin"
+        app:layout_constraintEnd_toStartOf="@id/textViews"
         app:layout_constraintTop_toBottomOf="@id/basement"
-        app:layout_constraintEnd_toStartOf="@id/textViews"/>
+        app:srcCompat="@android:drawable/ic_menu_view" />
 
     <ImageView
         android:id="@+id/like"
         android:layout_width="@dimen/dimIc"
         android:layout_height="@dimen/dimIc"
-        app:srcCompat="@drawable/ic_like_24"
         android:layout_marginVertical="@dimen/common_margin"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/basement"/>
+        app:layout_constraintTop_toBottomOf="@id/basement"
+        app:srcCompat="@drawable/ic_like_24" />
 
     <TextView
         android:id="@+id/textLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="10"
+        app:layout_constraintBottom_toBottomOf="@id/like"
         app:layout_constraintStart_toEndOf="@id/like"
-        app:layout_constraintTop_toTopOf="@id/like"
-        app:layout_constraintBottom_toBottomOf="@id/like"/>
+        app:layout_constraintTop_toTopOf="@id/like" />
 
     <TextView
         android:id="@+id/textShare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5"
+        app:layout_constraintBottom_toBottomOf="@id/share"
         app:layout_constraintStart_toEndOf="@id/share"
-        app:layout_constraintTop_toTopOf="@id/share"
-        app:layout_constraintBottom_toBottomOf="@id/share"/>
+        app:layout_constraintTop_toTopOf="@id/share" />
 
     <TextView
         android:id="@+id/textViews"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/common_margin"
         android:text="5k"
-        app:layout_constraintTop_toTopOf="@id/views"
         app:layout_constraintBottom_toBottomOf="@id/views"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/common_margin"/>
+        app:layout_constraintTop_toTopOf="@id/views" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
