--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/common_margin"
-    tools:context=".activity.MainActivity">
+    tools:context=".fragment.FeedFragment">
 
     <ImageView
         android:id="@+id/avatar"
@@ -47,6 +47,7 @@
         style="@style/Widget.AppTheme.MenuButton"
         android:layout_width="48dp"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/description_post_menu"
         app:icon="@drawable/menu_selector"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -78,11 +79,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/content">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@mipmap/ic_launcher_foreground"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher_foreground" />
     </FrameLayout>
 
     <androidx.constraintlayout.widget.Barrier
