--- a/app/src/main/res/layout/fragment_single_post.xml
+++ b/app/src/main/res/layout/fragment_single_post.xml
@@ -2,11 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <include
         android:id="@+id/postView"
         layout="@layout/card_post"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="wrap_content" />
+</ScrollView>
 </FrameLayout>
